--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "setup-email": "node setup-env.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@tabler/icons-react": "^3.33.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.2",
-    "next": "15.3.2",
+    "next": "^15.3.5",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
-    "resend": "^4.5.1",
-    "tailwind-merge": "^3.3.0"
+    "resend": "^4.6.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
